fixed serverInfo tab spacing

--- a/public/components/client/datapacks.css
+++ b/public/components/client/datapacks.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex: 1;
     height: 25vh;
-    margin: 2vh 2vh 2vh 0vh;
+    margin: 2vh 2vh 2vh 1vh;
     padding: 10px;
     border-radius: 10px;
     background-color: var(--grey);
